--- a/client/modules/Login/Login.css
+++ b/client/modules/Login/Login.css
@@ -60,5 +60,5 @@
   left: 20px;
   object-fit: cover;
   display: inline-block;
-  z-index: 10;
+  z-index: 2;
 }
